test/testData/parser/negative/structual.err
test/testData/parser/negative/structual.c:1:4: error: use of 'S1' with tag type that does not match previous declaration
test/testData/parser/negative/structual.c:1:5: error: use of 'S1' with tag type that does not match previous declaration
test/testData/parser/negative/structual.c:3:9: error: field 's1' has incomplete type 'STRUCT S1'
test/testData/parser/negative/structual.c:3:14: error: field 's1' has incomplete type 'STRUCT S1'
test/testData/parser/negative/structual.c:3:19: error: use of 'S1' with tag type that does not match previous declaration
test/testData/parser/negative/structual.c:3:20: error: use of 'S1' with tag type that does not match previous declaration
